src2/objects/NES_AssetStatus__c.object
<CustomObject>
    <fields>
        <fullName>Account_First_Time_Connected__c</fullName>
        <description>This field informs us when the machine was connected to current Account</description>
        <label>Account First Time Connected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AgentId__c</fullName>
        <description>AgentId received from Asset</description>
        <label>AgentId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Chassis_S_N__c</fullName>
        <formula>NES_Asset__r.SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Chassis S/N</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_FW_Version__c</fullName>
        <description>Chasis FW</description>
        <label>Asset FW Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Time_Blocked__c</fullName>
        <label>Current Time Blocked (in minutes)</label>
        <summarizedField>Blocked_Log__c.BlockedDuration__c</summarizedField>
        <summaryFilterItems>
            <field>Blocked_Log__c.Blocked_Summary__c</field>
            <operation>notEqual</operation>
            <value>Daily, Weekly, Monthly</value>
        </summaryFilterItems>
        <summaryForeignKey>Blocked_Log__c.AssetStatus__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Default_Modem_Profile_Customized_by_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates if user has changed some Default Modem Profile settings</description>
        <label>Default Modem Profile Customized by User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Modem_Profile__c</fullName>
        <description>Field to store what Default Modem Profile has set up for the asset</description>
        <label>Default Modem Profile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Message__c</fullName>
        <label>Failure Message</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contract conflict</fullName>
                    <label>Active Telemetry contract service not found</label>
                </value>
                <value>
                    <fullName>Asset without market or agent assigned</fullName>
                </value>
                <value>
                    <fullName>S/N error</fullName>
                </value>
                <value>
                    <fullName>S/N error and Unkown SKU</fullName>
                </value>
                <value>
                    <fullName>Sales Org not matched with Agent information</fullName>
                </value>
                <value>
                    <fullName>Sales Org not matched with Nessoft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Type__c</fullName>
        <label>Failure Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Market/Agent Conflict</fullName>
                </value>
                <value>
                    <fullName>Orphan Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Down__c</fullName>
        <label>First Down</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Halted__c</fullName>
        <label>First Halted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Time_Connected__c</fullName>
        <description>This field informs us the first time this asset was connected to Service Cloud</description>
        <label>First Time Connected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Warning__c</fullName>
        <label>First Warning</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Historical_Time_Blocked__c</fullName>
        <label>Historical Time Blocked (in minutes)</label>
        <summarizedField>Blocked_Log__c.BlockedDuration__c</summarizedField>
        <summaryForeignKey>Blocked_Log__c.AssetStatus__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LimitDaysWithoutConnectionEmailSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limit days without connection email send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LimitOfDaysWithoutConnection__c</fullName>
        <inlineHelpText>Duration without connection limit before an alarm is sent to the connectivity manager</inlineHelpText>
        <label>Limit of days without connection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NES_Asset__c</fullName>
        <label>Asset Chasis</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Statuses</relationshipLabel>
        <relationshipName>Asset_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NES_BrewingUnitJam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brewing Unit Jam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_CoffeePumpOverheating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coffee Pump Overheating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_DescalingRequestTriggeredByVolume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descaling Request Triggered By Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_DirectWaterConnectionIssue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Water Connection Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_DripTrayFull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drip Tray Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_FilterChangeRequestTriggeredByVolume__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter change request by Volume</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_ICCID__c</fullName>
        <label>ICCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_IMSI__c</fullName>
        <label>IMSI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_LastCommunicationTimestamp__c</fullName>
        <label>Last Communication Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NES_MachineGeographicalPosition__c</fullName>
        <label>Asset geographical position</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>NES_PadBinFull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pad Bin Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_RunOutOfWater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Out Of Water</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_SIMActivationDate__c</fullName>
        <label>SIM Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NES_SIMState__c</fullName>
        <label>SIM State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INACTIVE_NEW</fullName>
                    <label>Inactive New</label>
                </value>
                <value>
                    <fullName>TEST</fullName>
                    <label>Test</label>
                </value>
                <value>
                    <fullName>ACTIVATION_PENDANT</fullName>
                    <label>Activation Pendant</label>
                </value>
                <value>
                    <fullName>ACTIVATION_READY</fullName>
                    <label>Activation Ready</label>
                </value>
                <value>
                    <fullName>DEACTIVATED</fullName>
                    <label>Deactivated</label>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>SUSPENDED</fullName>
                    <label>Suspended</label>
                </value>
                <value>
                    <fullName>RETIRED</fullName>
                    <label>Retired</label>
                </value>
                <value>
                    <fullName>RESTORE</fullName>
                    <label>Restore</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NES_ServiceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipName>Asset_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_WaterTankEmpty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Tank Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NES_WaterTankMissing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Tank Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operational_Status_Data_Change__c</fullName>
        <description>Data of the last change of operational Status</description>
        <label>Operational Status Data Change</label>
        <type>DateTime</type>
    </fields>
    <label>Asset Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NES_Asset__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>